# Portex

./: .gitignore  Makefile  README.md  aibe.mkv  build.sh  index.md
LM/: CMakeLists.txt  Makefile  Makefile.bkp  app
LM/isv_app/: aibe.h  isv_app.cpp  log.h  merklecpp.h  ra.h
LM/isv_enclave/: isv_enclave.edl  isv_enclave_t.c  isv_enclave_t.h
LM/service_provider/: network_ra.cpp  network_ra.h
LogManager/: CMakeLists.txt  LM.code-workspace  config.json  download.html  index.html  logView.html  log_page.html  onepage2.html  product.html  service.html  start.sh  work.html
LogManager/assets/css/: style.css  templatemo-breezed.css
LogManager/controllers/: api_log.cc  api_log.h
LogManager/isv_app/: isv_app.cpp  merklecpp.h  ra.h  sample_messages.h
LogManager/isv_enclave/: isv_enclave.cpp
LogManager/param/: aibe.param  lm-sign.pem  mpk.out
LogManager/service_provider/: aibe.h  ec_crypto.h  isv_enclave_u.c  isv_enclave_u.h  log.cpp  log.h  network_ra.cpp  network_ra.h
LogManager/test/: CMakeLists.txt
LogManager/views/: LogView.csp
LogManager/work/css/: style.css
LogManager/work/js/: portex.js
client/: CMakeLists.txt  Makefile  Makefile.bkp  README.md  client.code-workspace  config.json  index.html  index.html.bkp  keygen.txt  out.txt  start.sh
client/aibe_algorithms/: aibe.cpp  aibe.h
client/assets/js/: portex.js
client/isv_app/: ClientView.cc  ClientView.cpp  ClientView.csp  ClientView.h  aibe.h  isv_app.cpp  isv_enclave_u.c  isv_enclave_u.h  merklecpp.h  ra.h
client/isv_enclave/: isv_enclave.config.xml  isv_enclave.cpp  isv_enclave.edl  isv_enclave_t.c  isv_enclave_t.h
client/param/: aibe.param  client-sign.pem  client-sk.pem  client-verify.pem  ec-pri.pem  ec-pub.pem  mpk.out  pkg-verify.pem  pkg_verify.pem
client/service_provider/: aibe.h  ec_crypto.h  ias_ra.cpp  log.cpp  log.h  network_ra.cpp  network_ra.h  service_provider.cpp
client/test/: Makefile  cmake_install.cmake
client/views/: ClientView.csp
client/work/css/: style.css
cmake/: FindSGX.cmake
docs/: index.md
docs/_layouts/: default.html
pages/: _config.yml
pkg/: Makefile  README.txt  ec-pub.pem  start.sh
pkg/isv_app/: aibe.h  isv_app.cpp  isv_enclave_u.c  isv_enclave_u.h  log.h  merklecpp.h
pkg/isv_enclave/: isv_enclave.cpp  isv_enclave.edl  isv_enclave_t.c  isv_enclave_t.h
pkg/param/: aibe.param  client-pk.pem  lm-verify.pem  pkg-pub.pem  pkg-sign.pem
pkg/service_provider/: aibe.h  network_ra.cpp  network_ra.h  service_provider.cpp  service_provider.h
